--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ a<!DOCTYPE html>
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="/storage/emulated/0/project/img.jpg"alt="Your Profile Picture" class="profile-picture">
+            <img src="img.jpg"alt="Your Profile Picture" class="profile-picture">
             <h1>meenakshi .E</h1>
             <p>computer science student</p>
         </div>
@@ -157,7 +157,7 @@ I am studying computer science with a strong interest in software development an
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="/storage/emulated/0/project/file.docx"target="_blank" class="download-button">Download CV</a>
+            <a href="file.pdf"target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
